build works with admin CMD

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -25,6 +25,12 @@
     ],
     "directories": {
       "output": "release"
+    },
+    "asar": false,
+    "win": {
+      "target": [
+        "portable"
+      ]
     }
   }
 }
