run dev and build works
run dev and build works start doesn't show desktop components

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -6,8 +6,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development electron .",
-    "build": "pnpm run build:web && electron-builder --dir",
-    "build:web": "cd ../web && pnpm run build",
+    "build": "pnpm run build:web && electron-builder",
+    "build:web": "pnpm --filter maaserot-web build",
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
@@ -21,6 +21,7 @@
     "appId": "com.yourcompany.maaserotcalculator",
     "files": [
       "main.js",
+      "preload.js",
       "../web/out/**/*"
     ],
     "directories": {
