--- a/apps/desktop/release/builder-effective-config.yaml
+++ b/apps/desktop/release/builder-effective-config.yaml
@@ -5,6 +5,7 @@ appId: com.yourcompany.maaserotcalculator
 files:
   - filter:
       - main.js
+      - preload.js
       - ../web/out/**/*
 asar: false
 win:
