--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:desktop": "turbo run dev --filter maaserot-desktop",
     "build": "turbo run build",
     "start": "turbo run start",
-    "build:desktop": "turbo run build --filter=maaserot-desktop",
+    "build:desktop": "turbo run build --filter=maaserot-desktop...",
     "start:desktop": "turbo run start --filter=maaserot-desktop",
     "pack:desktop": "turbo run pack --filter=maaserot-desktop",
     "dist:desktop": "turbo run dist --filter=maaserot-desktop",
