--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "turbo run build",
     "start": "turbo run start",
     "build:web": "turbo run build --filter=web",
-    "build:desktop": "pnpm run build:web && turbo run build --filter=maaserot-desktop...",
+    "build:desktop-old": "pnpm run build:web && turbo run build --filter=maaserot-desktop...",
+    "build:desktop": "turbo run build --filter=maaserot-desktop...",
+    "start:desktop-old": "turbo run start --filter=maaserot-desktop",
     "start:desktop": "turbo run start --filter=maaserot-desktop",
     "pack:desktop": "turbo run pack --filter=maaserot-desktop",
     "dist:desktop": "turbo run dist --filter=maaserot-desktop",
