--- a/apps/desktop/release/builder-debug.yml
+++ b/apps/desktop/release/builder-debug.yml
@@ -94,8 +94,8 @@ nsis:
       !insertmacro MUI_LANGUAGE "Vietnamese"
     !macroend
 
-    !include "C:\WINDOWS\temp\t-9jUNhl\0-messages.nsh"
     !addplugindir /x86-unicode "C:\Users\ayw10\.cache\electron-builder\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
+    !include "C:\WINDOWS\temp\t-vSvFuC\0-messages.nsh"
 
     Var newStartMenuLink
     Var oldStartMenuLink
