pics in sidebar working on the app

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -17,6 +17,10 @@
     ],
     "extraResources": [
       {
+        "from": "../web/public",
+        "to": "public"
+      },
+      {
         "from": "../web/out",
         "to": "web/out"
       }
