--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -28,7 +28,8 @@
     ".next/types/**/*.ts",
     "dist/types/**/*.ts",
     "out/types/**/*.ts",
-    "app/components/ElectronOnly.jsx"
+    "app/components/ElectronOnly.jsx",
+    "app/layout.jsx"
   ],
   "exclude": ["node_modules"]
 }
